# backtest360-client

./: .gitignore  404.html  CHANGELOG.md  DEVELOPMENT.md  LICENSE  README.md  conftest.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: docs.yml  release.yml  test.yml
concepts/result-anatomy/: index.html
concepts/signal-vs-execution/: index.html
concepts/strategy-shape/: index.html
concepts/versioning/: index.html
docs/: index.md
docs/concepts/: result-anatomy.md  signal-vs-execution.md  strategy-shape.md  versioning.md
docs/getting-started/: api-key.md  first-backtest.md  install.md
docs/how-to/: custom-slippage.md  handle-errors.md  set-stops.md  use-your-own-data.md
docs/reference/: client.md  costs.md  exceptions.md  execution.md  result.md  risk.md  sizing.md  strategy.md
docs/tutorials/: compare-strategies.md  mean-reversion.md  with-benchmark.md
examples/: README.md  compare_strategies.py  custom_strategy.py  error_handling.py  quickstart_yahoo_btc.py  raw_api.py  with_benchmark.py
getting-started/api-key/: index.html
getting-started/first-backtest/: index.html
getting-started/install/: index.html
how-to/custom-slippage/: index.html
how-to/handle-errors/: index.html
how-to/set-stops/: index.html
how-to/use-your-own-data/: index.html
reference/client/: index.html
reference/costs/: index.html
reference/exceptions/: index.html
reference/execution/: index.html
reference/result/: index.html
reference/risk/: index.html
reference/sizing/: index.html
reference/strategy/: index.html
search/: search_index.json
src/backtest360/: __init__.py  _detection.py  client.py  conditions.py  dtos.py  exceptions.py  strategy.py
src/backtest360/strategies/: __init__.py
src/backtest360/strategies/templates/: __init__.py  buy_and_hold.py  donchian_breakout.py  rsi_threshold_long.py  sma_crossover.py
tests/: test_client.py  test_conditions.py  test_dtos.py  test_exceptions.py  test_integration.py  test_smoke.py  test_strategies.py  test_strategy.py
tutorials/compare-strategies/: index.html
tutorials/mean-reversion/: index.html
tutorials/with-benchmark/: index.html
