[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "backtest360-client"
dynamic = ["version"]
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0",
    "httpx>=0.27",
    "python-dateutil",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov",
    "mypy>=1.0",
    "ruff>=0.4",
    "pdoc",
    "hatch-vcs",
]

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0.dev0"

[tool.hatch.build.targets.wheel]
packages = ["src/backtest360"]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
strict = true
python_version = "3.10"

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: live HTTP tests against a running engine (requires BACKTEST360_API_KEY and BACKTEST360_ENGINE_URL)",
]
